<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:gravity="center"
    >

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="380dp"
        android:layout_gravity="center"
        android:background="@drawable/custom_cardview"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <TextView
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/home_tittle_text"
            android:textColor="@color/purple_700"
            android:textSize="32sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <Button
            android:id="@+id/botaoUm"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="@drawable/custom_button"
            android:gravity="center"
            android:text="@string/some_fuel"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <Button
            android:id="@+id/botaoDois"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_button"
            android:gravity="center"
            android:text="@string/fuel_expense"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />
    </LinearLayout>
</RelativeLayout>